# OpenGL_BreakOut

./: .gitignore  CMakeLists.txt  OpenGL_BreakOut.sln  README.md  premake5.lua
Breakout/: Breakout.vcxproj
Breakout/includes/glad/: glad.h
Breakout/src/: ball_object.cpp  game_level.cpp  game_level.h  game_object.h  gui.h  main.cpp  particle_generator.cpp  particle_generator.h  post_processor.cpp  post_processor.h  resource_manager.cpp  shader.cpp  task.h  texture.h  texture_renderer.h  triangle_renderer.cpp  utility.h
External Library/libs/: box2d.lib
OpenGL_BreakOut/: CMakeLists.txt  Collision.h  OpenGL_BreakOut.cpp  OpenGL_BreakOut.vcxproj  OpenGL_BreakOut.vcxproj.filters  _main.cpp  ball_object.cpp  ball_object.h  convert.h  debugger.h  draw.cpp  draw.h  game.cpp  game.h  game_level.cpp  game_level.h  game_object.cpp  game_object.h  glad.c  gui.h  main.cpp  particle.h  particle_generator.cpp  physics.h  post_processor.cpp  power_up.h  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h  sprite_renderer.cpp  sprite_renderer.h  texture_renderer.cpp  triangle_renderer.h  utility.h
OpenGL_BreakOut/resources/shaders/: triangle.vs
